responsive - some enhancements

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,6 +79,9 @@
   margin-left: 10px;
   margin-right: 10px;
 } 
+.PhoneInputInput {
+  outline:  none;
+}
 button:disabled {
   background-color: #d6d6d6 !important;
   border-color: #d6d6d6 !important;
