--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@ html {
     scroll-padding-top: 120px; /* height of your navbar */
   }
 
-.active-scroll-spy {
+.active_cat {
     background-color: #E30015;
     transition: all 0.5s;
     color: white;
