--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,14 @@
 }
 
 @font-face {
+  font-family: 'Tajawal-Medium';
+  src: url('../public/fonts/Tajawal-Medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'Alexandria-Medium';
   src: url('../public/fonts/Alexandria-Medium.ttf') format('truetype');
   font-weight: normal;
@@ -72,6 +80,11 @@
 
 .Montserrat-Arabic-Regular {
   font-family: 'Montserrat-Arabic-Regular', 'sans-serif' !important;
+}
+
+.font-tajwal-medium,
+.Toastify__toast-body>div {
+  font-family: 'Tajawal-Medium', 'sans-serif' !important;
 }
 
 
