--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,3 +101,23 @@ button:disabled {
   color: #FFF !important
 }
 
+
+/* responsive fonts */
+@layer components{
+  .xxs-mobile-xs-desktop{
+    @apply text-xxs md:text-xs
+  }
+  .xs-mobile-sm-desktop{
+    @apply text-xs md:text-sm
+  }
+  .sm-mobile-base-desktop{
+    @apply text-sm md:text-base
+  }
+  .base-mobile-lg-desktop{
+    @apply text-base md:text-lg
+  }
+  .lg-mobile-xl-desktop{
+    @apply text-lg md:text-xl
+  }
+}
+
