--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@
 @font-face {
   font-family: 'Alexandria-SemiBold';
   src: url('../public/fonts/Alexandria-SemiBold.ttf') format('truetype');
-  font-weight:normal;
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
@@ -37,7 +37,7 @@
 @font-face {
   font-family: 'Alexandria-Light';
   src: url('../public/fonts/Alexandria-Light.ttf') format('truetype');
-  font-weight:normal;
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
@@ -45,7 +45,7 @@
 @font-face {
   font-family: 'Alexandria-Bold';
   src: url('../public/fonts/Alexandria-Bold.ttf') format('truetype');
-  font-weight:normal;
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
@@ -53,7 +53,7 @@
 @font-face {
   font-family: 'Montserrat-Arabic-Regular';
   src: url('../public/fonts/Montserrat-Arabic-Regular.ttf') format('truetype');
-  font-weight:normal;
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
@@ -83,47 +83,41 @@
 }
 
 .font-tajwal-medium,
-.Toastify__toast-body>div {
+.Toastify__toast-body > div {
   font-family: 'Tajawal-Medium', 'sans-serif' !important;
 }
-
 
 .PhoneInputCountrySelectArrow {
   margin-left: 10px;
   margin-right: 10px;
-} 
+}
 .PhoneInputInput {
-  outline:  none;
+  outline: none;
 }
 button:disabled {
-  background-color: #B7B1AE !important;
-  border-color: #B7B1AE !important;
-  color: #FFF !important
+  background-color: #b7b1ae !important;
+  border-color: #b7b1ae !important;
+  color: #fff !important;
 }
 
-
-<<<<<<< HEAD
 @layer components {
-  
-}
-=======
-/* responsive fonts */
-@layer components{
-  .xxs-mobile-xs-desktop{
-    @apply text-xxs md:text-xs
-  }
-  .xs-mobile-sm-desktop{
-    @apply text-xs md:text-sm
-  }
-  .sm-mobile-base-desktop{
-    @apply text-sm md:text-base
-  }
-  .base-mobile-lg-desktop{
-    @apply text-base md:text-lg
-  }
-  .lg-mobile-xl-desktop{
-    @apply text-lg md:text-xl
-  }
 }
 
->>>>>>> 278056388febec6ac1b7646b63aa17cd60ef1033
+/* responsive fonts */
+@layer components {
+  .xxs-mobile-xs-desktop {
+    @apply text-xxs md:text-xs;
+  }
+  .xs-mobile-sm-desktop {
+    @apply text-xs md:text-sm;
+  }
+  .sm-mobile-base-desktop {
+    @apply text-sm md:text-base;
+  }
+  .base-mobile-lg-desktop {
+    @apply text-base md:text-md;
+  }
+  .lg-mobile-xl-desktop {
+    @apply text-lg md:text-xl;
+  }
+}
